Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-11419] missing_witnesses_general Should only be emitted in IDE mode #53820

Closed
CodaFi opened this issue Sep 4, 2019 · 1 comment
Closed
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation good first issue Good for newcomers

Comments

@CodaFi
Copy link
Member

CodaFi commented Sep 4, 2019

Previous ID SR-11419
Radar None
Original Reporter @CodaFi
Type Bug
Status Resolved
Resolution Done
Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, DiagnosticsQoI, StarterBug
Assignee None
Priority Medium

md5: 8d48731592720aad3e645f6b523348b3

Issue Description:

We're currently emitting the note asking

do you want to add protocol stubs?

Outside of editor mode. This should not happen. There are two other places where we emit this that aren't surrounded by a check for editor mode, and both are in TypeCheckProtocol. Cover them both under that condition, then add a test to make sure that we don't see this note outside of IDE mode.

@LucianoPAlmeida
Copy link
Collaborator

Here is a PR #28101 🙂

cc @CodaFi

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation good first issue Good for newcomers
Projects
None yet
Development

No branches or pull requests

2 participants