[Diagnostics] SR-11419 Diagnose protocol stub note in editor mode only (#28101)

* [TypeChecker] Enclosing stubs protocol note within editor mode

* [test] Removing note from test where there is no -diagnostics-editor-mode flag

* Formatting modified code

* [tests] Fixing tests under validation-tests